# Hypertext

./: .gitignore  CMakeLists.txt  CMakePresets.json  HyperCore_Phase2  LICENSE  README.md  autocommit.ps1  build.ps1  generate_json.py  loop-commit.ps1  out.htx  what we are doing
.github/workflows/: ci.yml
cmake/: CompilerFlags.cmake  Dependencies.cmake
docs/: 01_study_cmix.md  02_study_paq.md  03_study_ans.md  04_study_gpu_compression.md  05_study_grammar_compression.md  06_architecture_design.md  07_goals_and_success_criteria.md  08_benchmark_plan.md  09_key_risks_and_mitigations.md  10_phase2_readiness_checklist.md  README.md
include/hypercore/: common.hpp  version.hpp
include/hypercore/analysis/: FileAnalyzer.hpp  GrammarBuilder.hpp  PatternMiner.hpp  TextAnalyzer.hpp  Token.hpp
include/hypercore/core/: ArchiveWriter.hpp  BitWriter.hpp  Block.hpp  CharacterPredictor.hpp  ContextMixer.hpp  IArchive.hpp  ICompressor.hpp  IPredictor.hpp  RansEncoder.hpp
include/hypercore/gpu/: IGpuBackend.hpp
include/hypercore/memory/: Allocator.hpp
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  FileAnalyzer.cpp  GrammarBuilder.cpp  PatternMiner.cpp  TextAnalyzer.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: ArchiveWriter.cpp  BitWriter.cpp  Block.cpp  CMakeLists.txt  CharacterPredictor.cpp  ContextMixer.cpp  IPredictor.cpp  RansEncoder.cpp
src/memory/: Allocator.cpp  CMakeLists.txt
tests/: CMakeLists.txt  test_allocator.cpp  test_analysis.cpp  test_archive.cpp  test_blake3.cpp  test_block.cpp  test_entropy.cpp  test_file_analysis.cpp  test_grammar.cpp  test_pattern_mining.cpp  test_prediction.cpp  test_smoke.cpp
tools/: benchmark.py
